Refresh PyCharm Spark guides