@@ -1,146 +1,233 @@
 # Υλοποίηση σε Apache Spark μέσω PyCharm
 
+## Οδηγίες
 
-
-## Οδηγίες εγκατάστασης pyspark σε pycharm με venv package manager
-
-Μπορείτε να δείτε οδηγίες υλοποίησης με Apache Spark εδώ
+Μπορείτε να δείτε τον οδηγό προγραμματισμού του Apache Spark εδώ:
 
 https://spark.apache.org/docs/latest/rdd-programming-guide.html
 
-Ο παρακάτω οδηγός θεωρεί ότι υπάρχουν εγκατεστημένες στον υπολογιστή σας οι τελευταίες εκδόσεις του εργαλείου **PyCharm Community Edition IDE**. Οι εκδόσεις για windows του εργαλείου βρίσκεται στο παρακάτω link. Αντί για το PyCharm, μπορείτε να χρησιμοποιήσετε το πρόγραμμα ανάπτυξης κώδικα Python της επιλογής σας.
+Ο παρακάτω οδηγός θεωρεί ότι έχετε εγκατεστημένο το **PyCharm Community Edition** και την **Python 3.11**. Για το `pyspark`, η Python 3.11 είναι μια ασφαλής και πρακτική επιλογή.
 
+PyCharm Community Edition:
 
-https://www.jetbrains.com/pycharm/download/download-thanks.html?platform=windows&code=PCC
+https://www.jetbrains.com/pycharm/download/
 
+Python 3.11:
 
-Kατεβάστε την python 3.11(Windows installer (64-bit)) για να την εγκαταστήσετε στον υπολογιστή σας. Μην εγκαταστήσετε την τελευταία έκδοση (3.13 όταν γράφτηκε αυτός ο οδηγός) γιατί δεν είναι πλήρως συμβατή με το pyspark.
+https://www.python.org/downloads/
 
-https://www.python.org/downloads/release/python-3110/
+## Δημιουργία νέου project στο PyCharm
 
-
-Κατά την εκτέλεση του PyCharm επιλέξτε την πρώτη φορά New Project
+Ανοίξτε το PyCharm και επιλέξτε `New Project`.
 
 ![Εικόνα 1](images/img1.png)
 
+Στο νέο project:
 
-Επίσης, την πρώτη φορά που θα τρέξετε το PyCharm, θα σας ζητήσει να βάλετε τον κατάλογο που χρησιμοποιεί για να γράφει τα αρχεία στις εξαιρέσεις του Windows Security. Ο λόγος είναι ότι το windows security καθυστερεί πάρα πολύ εργασίες που κάνει το εργαλείο με διαφορετικά αρχεία και εκδόσεις πακέτων της python.
+- επιλέξτε project τύπου `Pure Python`
+- δώστε ένα όνομα όπως `Spark_example`
+- αποφύγετε κενά σε ονόματα αρχείων και καταλόγων
+- στο `Interpreter type` επιλέξτε `Project venv`
+- ως base interpreter επιλέξτε την Python 3.11
+- η επιλογή `Create a welcome script` είναι προαιρετική
 
-![Εικόνα 2](images/img2.png)
+![Εικόνα 2](images/img3.png)
 
+Αν το PyCharm εμφανίσει μήνυμα από το Microsoft Defender για exclusions φακέλων, μπορείτε να επιλέξετε `Exclude folders`. Δεν είναι υποχρεωτικό για να τρέξει το παράδειγμα, αλλά συνήθως βοηθάει στις επιδόσεις του IDE.
 
-## Δημιουργία νέου PyCharm Project
+![Εικόνα 3](images/img2.png)
 
-Κατά την δημιουργία νέου project, πρέπει να επιλέξουμε τον python interpreter. Σαν επιλογή βάζουμε interpreter type “Project venv”. Ο στόχος αυτής της επιλογής είναι να χειριζόμαστε αυτόματα τις εξαρτήσεις των βιβλιοθηκών και να εγκαθίστανται αυτόματα αυτά που χρειαζόμαστε. Εάν θέλετε κάποιο διαφορετικό package manager μπορείτε να το δηλώσετε εκεί.
+## Εγκατάσταση Python πακέτων
 
-Δηλώστε σαν όνομα για το project το `Spark_example`. Είναι σημαντικό **να μην υπάρχουν κενά στα ονόματα των αρχείων και των καταλόγων**.
+Αφού δημιουργηθεί το project, εγκαταστήστε τα πακέτα `pyspark` και `psutil` στο interpreter του project.
 
-Τσεκάρετε την επιλογή `create a welcome script`
+Μπορείτε να το κάνετε είτε:
 
-Κατόπιν, εγκαθιστούμε τα απαραίτητα πακέτα από την επιλογή: File-> Settings->project->python Interpreter
+- από το `Python Packages` tool window
+- από το `Settings | Python | Interpreter`
+- από το ενσωματωμένο terminal του PyCharm με `python -m pip install pyspark psutil`
 
-![Εικόνα 3](images/img3.png)
-
-Τα πακέτα που χρειάζεστε είναι τα `pyspark` και `psutils`. Μετά την εγκατάσταση, και για μία φορά μόνο, κάντε μια επανεκκίνηση του pycharm. Δεν ξέρω αν χρειάζεται σε όλα τα περιβάλλοντα, αλλά στο δικό μου χρειάστηκε.
+Για αυτόν τον οδηγό δεν χρειάζεται να εγκαταστήσετε ξεχωριστά το Apache Spark στον υπολογιστή σας. Αρκούν το `pyspark` μέσα στο `.venv` και η Java.
 
 ## Εγκατάσταση Java στον υπολογιστή
 
-Από την διεύθυνση [https://jdk.java.net/23/](https://jdk.java.net/23/) κατεβάστε τη java για το λειτουργικό σας σύστημα (πχ για τα windows είναι το zip αρχείο). Αποσυμπιέστε τα περιεχόμενά του σε έναν κατάλογο, Πχ στον `C:\Program Files`
+Για τοπική εκτέλεση PySpark χρειάζεται JDK 17.
 
-![Εικόνα 4](images/img4.png)
+Στα Windows ο πιο απλός τρόπος είναι να ανοίξετε ένα PowerShell terminal και να εκτελέσετε:
 
-Θα δημιουργηθεί ένας κατάλογος της μορφής `C:\Program Files\jdk-23.0.2`
-
-Θα χρειαστεί να προσθέσετε τον κατάλογο αυτό στις μεταβλητές περιβάλλοντος του υπολογιστή σας σαν `JAVA_HOME`.
-
-Κάντε δεξί κλικ στο εικονίδιο των windows και επιλέξτε System
-
-![Εικόνα 5](images/img5.png)
-
-Κατόπιν, επιλέξτε Advanced System Settings
-
-![Εικόνα 6](images/img6.png)
-
-
-Κατόπιν επιλέξτε Environmental Variables
-
-![Εικόνα 7](images/img7.png)
-
-Στα System variables επιλέξτε new και προσθέστε Variable name: `JAVA_HOME` και Variable Value τον κατάλογο που αποσυμπιέσατε την java (στην δική μου περίπτωση `C:\Program Files\jdk-23.0.2`)
-
-Θα χρειαστεί να κάνετε **επανεκκίνηση του υπολογιστή σας** για να ενημερωθούν οι μεταβλητές περιβάλλοντος.
-
-## Ρύθμιση PyCharm για εκτέλεση pySpark κώδικα
-
-Για την εκτέλεση προγραμμάτων `.py` χρησιμοποιούμε τα `run configurations`, τα οποία περιέχουν παραμέτρους για την εκτέλεση του python προγράμματος. Για το configuration του αρχείου που θα τρέξετε πρέπει οπωσδήποτε να θέσετε ορισμένες μεταβλητές περιβάλλοντος που χρειάζονται οι Spark workers που θα σηκώσει το IDE για να τρέξουν python. Οι μεταβλητές τίθενται στην επιλογή `environmental variables` του run configuration που φαίνεται εδώ:
-
-![Εικόνα 8](images/img8.png)
-
-Οι μεταβλητές είναι οι παρακάτω:
-
+```powershell
+winget install --id Microsoft.OpenJDK.17 --accept-source-agreements --accept-package-agreements
 ```
-PYTHONUNBUFFERED=1;PYSPARK_DRIVER_PYTHON=C:\Users\ikons\PycharmProjects\Spark_example\.venv\Scripts\python.exe;PYSPARK_PYTHON=C:\Users\ikons\PycharmProjects\Spark_example\.venv\Scripts\python.exe;SPARK_SUBMIT_OPTS=-Djava.security.manager=allow
+
+Κατά την εγκατάσταση μπορεί να εμφανιστεί παράθυρο των Windows για εκτέλεση του installer με δικαιώματα διαχειριστή. Σε αυτή την περίπτωση επιλέξτε `Yes` / `Ναι` για να συνεχιστεί η εγκατάσταση.
+
+Αν το `winget` δεν είναι διαθέσιμο στο μηχάνημά σας, εγκαταστήστε χειροκίνητα οποιοδήποτε JDK 17 και βεβαιωθείτε ότι:
+
+- το `JAVA_HOME` δείχνει στον κατάλογο της εγκατάστασης
+- η εντολή `java` είναι διαθέσιμη στο `PATH`
+
+Αν η Java εγκαταστάθηκε ενώ το PyCharm ήταν ήδη ανοιχτό, κλείστε και ανοίξτε ξανά το PyCharm και δημιουργήστε νέο terminal, ώστε να φορτωθούν τα νέα environment variables. Κανονικά δεν χρειάζεται επανεκκίνηση του υπολογιστή. Στη συνέχεια, ελέγξτε ότι όλα είναι σωστά:
+
+```powershell
+java -version
 ```
-όπου σαν `path` μπαίνει το path του python εκτελέσιμου του περιβάλλοντος venv που δημιουργήθηκε για το project (ενδεικτικά είναι το παραπάνω, στον δικό σας υπολογιστή είναι διαφορετικό, μπορείτε να το δείτε από τα settings του interpreter), επιλέγοντας file->settings εδώ
 
-Αντίστοιχα, κάνετε το ίδιο και για το python console στην επιλογή File->Settings->preferences->build, execution, Deployment->console->python console (βάζετε τα env variables)
+## Δημιουργία αρχείων παραδείγματος
 
-![Εικόνα 9](images/img9.png)
+Δημιουργήστε δύο αρχεία στον κατάλογο του project: `main.py` και `text.txt`.
 
-
-Την πρώτη φορά που εκτελείτε τον κώδικά σας, μπορεί να βγει ερώτηση από το firewall για να επιτρέψετε πρόσβαση - ενεργοποιήστε την.
-
-## Εκτέλεση ενός δοκιμαστικού wordcount
-
-Δημιουργήστε ένα νέο αρχείο `.py`, ή απλώς αντικαταστήστε τα περιεχόμενα του `main.py` που δημιουργείται αυτόματα από το new project του pycharm με τον παρακάτω κώδικα.
-
+Αν έχει δημιουργηθεί αυτόματα welcome script, μπορείτε απλώς να αντικαταστήσετε τα περιεχόμενά του με το παρακάτω `main.py`.
 
 ```python
-from pyspark import SparkConf
+import os
+import sys
+
 from pyspark.sql import SparkSession
-if __name__ == '__main__':
-    conf = SparkConf().setAppName("Word Count example") \
-        .set("spark.executor.memory", "2g") \
-        .set("spark.driver.memory", "2g")
 
-    sc = SparkSession.builder.config(conf=conf).getOrCreate().sparkContext
-    #sc.setLogLevel("DEBUG")
-    #sc.setLogLevel("INFO")
+os.environ["PYSPARK_PYTHON"] = sys.executable
+os.environ["PYSPARK_DRIVER_PYTHON"] = sys.executable
 
-    wordcount = sc.textFile("text.txt") \
-        .flatMap(lambda x: x.split(" ")) \
-        .map(lambda x: (x, 1)) \
-        .reduceByKey(lambda x,y: x+y) \
-       .sortBy(lambda x: x[1], ascending=False)
+
+def main() -> None:
+    spark = SparkSession.builder.appName("Word Count example").getOrCreate()
+    sc = spark.sparkContext
+
+    wordcount = (
+        sc.textFile("text.txt")
+        .flatMap(lambda line: line.split())
+        .map(lambda word: (word, 1))
+        .reduceByKey(lambda left, right: left + right)
+        .sortBy(lambda item: item[1], ascending=False)
+    )
+
     print(wordcount.collect())
+    spark.stop()
+
+
+if __name__ == "__main__":
+    main()
 ```
 
-Θα χρειαστεί να τοποθετήσετε ένα αρχείο `text.txt` στον κατάλογο που βρίσκεται και το `main.py` του Pycharm Project με ενδεικτικά ορισμένες λέξεις για να τις «μετρήσει». Στην δική μου περίπτωση ο κατάλογος είναι ο `C:\Users\ikons\PycharmProjects\sparkExamples`
+Οι δύο γραμμές με το `sys.executable` λένε ρητά στο Spark να χρησιμοποιήσει τον ίδιο Python interpreter που έχει επιλέξει το project στο PyCharm. Έτσι, για αυτό το πρώτο παράδειγμα δεν χρειάζεται να δηλώσετε χειροκίνητα `PYSPARK_PYTHON` και `PYSPARK_DRIVER_PYTHON` στα Run Configurations.
 
-Με τις γραμμές `.set()` μπορείτε να περάσετε παραμέτρους στους spark executors, όπως την μέγιστη μνήμη που θα πάρει ο κάθε ένας.
+Στο `text.txt` βάλτε ενδεικτικά:
 
-Οι γραμμές `sc.setLogLevel` καθορίζουν το πόσο αναλυτικά θα είναι τα log messages που θα λαμβάνετε κατά την εκτέλεση του προγράμματος. Εγώ τώρα τις έχω σχολιασμένες, και τα log messages είναι λίγα. Αν έχετε πρόβλημα κατά την εκτέλεση αφαιρέστε το σχόλιο για να αυξήσετε το επίπεδο logging.
+```text
+spark spark data
+big data spark
+python spark
+```
 
-Εφόσον το έχετε έτοιμο, μπορείτε να το εκτελέσετε με 2 τρόπους:
+## Εκτέλεση και debugging στο PyCharm
 
-- Μέσω του `run configuration` (επιλογή στο menu `Run`, ή `Shift+F10`)
-- Μέσω του `Python Console`, που βρίσκεται αριστερά στο IDE (σημειωμένο με κόκκινο στο παρακάτω σχήμα) και λέγεται Python Console.
+Ανοίξτε το `main.py` και εκτελέστε το πρόγραμμα με έναν από τους παρακάτω τρόπους:
 
-![Εικόνα 10](images/img10.png)
+- από το πράσινο εικονίδιο `Run` στο gutter
+- με δεξί κλικ στο αρχείο και επιλογή `Run 'main'`
+- με το shortcut `Shift+F10`
 
+Για debugging:
 
-Την πρώτη φορά που θα το εκτελέσετε, θα σας ζητηθεί από το πρόγραμμα ασφαλείας του υπολογιστή σας (πχ windows defender) να αποδεχθείτε την εξαίρεση ασφαλείας – επιλέξτε `ΟΚ`.
+- πατήστε το εικονίδιο `Debug` στο gutter
+- ή κάντε δεξί κλικ και επιλέξτε `Debug 'main'`
 
+Για αυτό το απλό παράδειγμα δεν χρειάζεται να δημιουργήσετε χειροκίνητα Run Configuration με environment variables. Το PyCharm μπορεί να δημιουργήσει αυτόματα ένα προσωρινό run/debug configuration για το τρέχον αρχείο, και αυτό είναι αρκετό.
 
-Μέσω του `python console` μπορείτε να έχετε μια διαδραστική εκτέλεση των μετασχηματισμών σας, χωρίς να χρειάζεται να σηκώνετε και να εκτελείτε εκ νέου όλη τη μηχανή Spark για κάθε αλλαγή στον κώδικα (κάτι σαν το spark shell στο command line). 
+Την πρώτη φορά που θα εκτελέσετε το πρόγραμμα, μπορεί να εμφανιστεί ερώτηση από το firewall / Windows Defender για το `OpenJDK Platform binary`. Αν εμφανιστεί, επιλέξτε `Allow`, ώστε το Spark να μπορέσει να ανοίξει την τοπική θύρα που χρειάζεται.
 
-Με το `python console` επίσης μπορείτε να βλέπετε τις μεταβλητές που δημιουργεί το spark, και να ελέγχετε την ορθότητά τους (δεξιά στο σχήμα).
+Αν όλα έχουν ρυθμιστεί σωστά, θα δείτε στο output αποτέλεσμα όπως:
 
-![Εικόνα 11](images/img11.png)
+```text
+[('spark', 4), ('data', 2), ('big', 1), ('python', 1)]
+```
 
+## Πειραματισμός με `pyspark`
 
-Ένας άλλος τρόπος να ελέγχετε τί γίνεται είναι μέσω του URL  στο οποίο τρέχει το UI του scheduler του Spark. Παρακάτω εκτελώ έναν μετασχηματισμό rdd από την κονσόλα και βλέπω την εκτέλεσή του στο [http://localhost:4040](http://localhost:4040). Μόλις τερματίσω την κονσόλα σταματάει και η εκτέλεση του webserver
+Αν θέλετε να πειραματίζεστε διαδραστικά με Spark, έχετε δύο πρακτικές επιλογές:
 
-![Εικόνα 12](images/img12.png)
+- το `pyspark`, που ανοίγει έτοιμη κονσόλα με διαθέσιμα τα `sc` και `spark`, αλλά σε Windows συχνά δεν δίνει βολικό history με τα πλήκτρα `Up` / `Down`
+- την κανονική Python κονσόλα που ανοίγετε με `python`, η οποία συνήθως έχει πιο βολικό history και editing, αλλά θέλει χειροκίνητη δημιουργία του `SparkSession`
 
-![Εικόνα 13](images/img13.png)
+Σημείωση: το `pyspark` είναι για Python, ενώ το `spark-shell` είναι Scala shell. Η εντολή `sparkshell` χωρίς παύλα δεν είναι έγκυρη.
+
+### Επιλογή 1: `pyspark`
+
+Το `pyspark` είναι ο πιο γρήγορος τρόπος αν θέλετε να ξεκινήσετε αμέσως με έτοιμα τα `sc` και `spark`.
+
+Αφού έχετε ενεργό το `.venv` και η εντολή `java -version` δουλεύει, εκτελέστε στο terminal:
+
+```powershell
+$env:PYSPARK_PYTHON = (Resolve-Path .\.venv\Scripts\python.exe).Path
+$env:PYSPARK_DRIVER_PYTHON = $env:PYSPARK_PYTHON
+pyspark
+```
+
+Μόλις ανοίξει το shell, μπορείτε να δοκιμάσετε για παράδειγμα:
+
+```python
+sc.parallelize([1, 2, 3]).count()
+spark.range(5).show()
+```
+
+Για έξοδο από το shell:
+
+```python
+exit()
+```
+
+### Επιλογή 2: άνοιγμα κανονικής Python κονσόλας από το terminal
+
+Αν θέλετε πιο άνετο history και πιο προβλέψιμη εμπειρία στο terminal, μπορείτε να ανοίξετε πρώτα την κανονική Python κονσόλα:
+
+```powershell
+python
+```
+
+και στη συνέχεια να δημιουργήσετε χειροκίνητα το Spark session:
+
+```python
+import os
+import sys
+from pyspark.sql import SparkSession
+
+os.environ["PYSPARK_PYTHON"] = sys.executable
+os.environ["PYSPARK_DRIVER_PYTHON"] = sys.executable
+
+spark = SparkSession.builder.appName("playground").getOrCreate()
+sc = spark.sparkContext
+```
+
+Μετά μπορείτε να πειραματιστείτε με εντολές όπως:
+
+```python
+sc.parallelize([1, 2, 3]).count()
+spark.range(5).show()
+```
+
+Όταν τελειώσετε:
+
+```python
+spark.stop()
+exit()
+```
+
+## Έλεγχος του Spark UI
+
+Όσο το πρόγραμμα εκτελείται, μπορείτε να παρακολουθείτε το Spark UI συνήθως στο:
+
+[http://localhost:4040](http://localhost:4040)
+
+Μόλις τερματίσετε την εκτέλεση του προγράμματος, σταματά και ο αντίστοιχος web server του Spark UI.
+
+Η ακριβής εμφάνιση του Spark UI μπορεί να διαφέρει λίγο ανάλογα με την έκδοση του Spark, αλλά η βασική ιδέα παραμένει η ίδια.
+
+![Εικόνα 4](images/img13.png)
+
+## Χρήσιμες παρατηρήσεις
+
+- Αν το `java -version` δεν δουλεύει αμέσως μετά την εγκατάσταση, κλείστε και ανοίξτε ξανά το PyCharm και δημιουργήστε νέο terminal.
+- Αν το project δεν χρησιμοποιεί το σωστό `.venv`, ελέγξτε ξανά το `Settings | Python | Interpreter`.
+- Αν δείτε warnings για `winutils.exe` ή `NativeCodeLoader`, μπορείτε να τα αγνοήσετε σε αυτό το απλό τοπικό παράδειγμα σε Windows.
+- Αν το αρχείο `text.txt` δεν βρίσκεται στον σωστό κατάλογο, το πρόγραμμα θα αποτύχει επειδή δεν θα το βρει.
+- Αν η πόρτα `4040` χρησιμοποιείται ήδη, το Spark μπορεί να ξεκινήσει το UI σε άλλη θύρα όπως `4041`.
+- Το `Python Console` του PyCharm είναι χρήσιμο για πιο προχωρημένη διαδραστική χρήση, αλλά δεν χρειάζεται για αυτό το πρώτο παράδειγμα.
